<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RetailerScreen">

    <EditText
        android:id="@+id/editText_uid_retailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_uid"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_save_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@color/colorPrimary"
        android:padding="15dp"
        android:text="@string/save_data"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_add2chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="saveData"/>

    <Button
        android:id="@+id/button_add2chain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:background="@color/colorPrimary"
        android:padding="15dp"
        android:text="@string/add_2_pchain"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="add2Chain"/>

    <TextView
        android:id="@+id/textView_welcome_retailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        android:textIsSelectable="true"/>

    <EditText
        android:id="@+id/editText_received_from"
        android:layout_width="237dp"
        android:layout_height="44dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/which_shipper_sent_it"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_uid_retailer"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>