<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShipperScreen">

    <EditText
        android:id="@+id/editText_uid_shipper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_uid"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcome_shipper" />

    <EditText
        android:id="@+id/editText_sent_to_retailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sent_to_which_retailer"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/spinner_certs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_uid_shipper"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/spinner_certs"
        android:layout_width="344dp"
        android:layout_height="32dp"
        android:layout_marginBottom="100dp"
        android:entries="@array/certs"
        app:layout_constraintBottom_toTopOf="@+id/button_save_data_shipper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_save_data_shipper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/save_data"
        app:layout_constraintBottom_toTopOf="@+id/button_add2chain_shipper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:onClick="saveData"/>

    <Button
        android:id="@+id/button_add2chain_shipper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:text="@string/add_2_pchain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:onClick="add2Chain"/>

    <TextView
        android:id="@+id/textView_welcome_shipper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>